--- a/ch08www2/templates/footer.html
+++ b/ch08www2/templates/footer.html
@@ -1,4 +1,4 @@
 <hr>
 {% load static %}
-<img src="{% static 'Logo.png' %}" style="width: 100px" alt="Logo.png"/>
-<em>Copyright 2021. All rights reserved.</em>
+<img src="{% static 'logo.png' %}" style="width: 50px" alt="logo.png"/>
+<h><em>Copyright 2021. All rights reserved.</em></h>
