--- a/ch08www2/templates/base.html
+++ b/ch08www2/templates/base.html
@@ -6,6 +6,7 @@
     {% load static %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script>{% block js %}{% endblock %}</script>
 </head>
 <body>
 {% include 'header.html' %}
