--- a/mysite2/mysite/templates/account/login2.html
+++ b/mysite2/mysite/templates/account/login2.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
 Login
@@ -6,11 +7,14 @@ Login
 
 {% block content %}
 <div class="row text-center vertical-middle-sm">
-<h1>Login</h1>
+<h1>Login--Built in Method of Django</h1>
+{% if form.errors %}
+    <p>Your username and password didn't match. Please tyr again.</p>
+
+{% endif %}
 <p>Input your username and password</p>
 <form class="form-horizontal" action="." method="post">
     {% csrf_token %}
-{#    {{ form.as_p }}#}
     <div class="form-group">
         <label for="{{ form.username.id_for_label }}" class="col-md-5 control-label" style="color:red">
             <span class="glyphicon glyphicon-user"></span><span>UserName</span>
