--- a/mysite2/mysite/templates/base.html
+++ b/mysite2/mysite/templates/base.html
@@ -1,19 +1,20 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://github.com/necolas/normalize.css/blob/master/normalize.css">
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 </head>
 <body>
+{% include "header.html" %}
 <div class="container">
     {% block content %}
-
     {% endblock %}
 </div>
-<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-<script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+{% include 'footer.html' %}
+{% block javascript %}{% endblock %}
 </body>
+
 </html>
