--- a/mysite2/mysite/templates/account/login2.html
+++ b/mysite2/mysite/templates/account/login2.html
@@ -12,8 +12,12 @@ Login
     <p>Your username and password didn't match. Please tyr again.</p>
 
 {% endif %}
-<p>Input your username and password</p>
+<p>Input your username and ppassword_change_doneassword</p>
+{% if next %}
+<form class="form-horizontal" action="{% url 'account:user_login' %}?next={{ next }}" method="post">
+{% else %}
 <form class="form-horizontal" action="." method="post">
+{% endif %}
     {% csrf_token %}
     <div class="form-group">
         <label for="{{ form.username.id_for_label }}" class="col-md-5 control-label" style="color:red">
