--- a/mysite2/mysite/templates/header.html
+++ b/mysite2/mysite/templates/header.html
@@ -15,6 +15,16 @@
                 {% if user.is_authenticated %}
                     <li><a href="#">{{ user.username }}</a> </li>
                     <li><a href="{% url 'account:user_logout' %}">logout</a></li>
+                    <li>
+                        <div class="dropdown" style="margin-top: 8px">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown">
+                                {{ user.username }}<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="{% url 'account:password_change' %}">Change password</a></li>
+                            </ul>
+                        </div>
+                    </li>
                 {% else %}
                     <li><a href="{% url 'account:user_login' %}">Login</a> </li>
                 {% endif %}
@@ -23,3 +33,7 @@
         </div>
     </nav>
 </div>
+
+<script src="{% static 'js/jquery.js' %}"></script>
+<script src="{% static 'js/bootstrap.js' %}"></script>
+
