--- a/mysite2/mysite/templates/account/password_reset_form.html
+++ b/mysite2/mysite/templates/account/password_reset_form.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}
-Password Change
+Password Reset
 {% endblock %}
 {% block content %}
     <div class="row text-center vertical-middle-sm">
-        <h1>Change Password</h1>
-        <p>Please enter you old password, for security's sake, and then enter your new password twice so we can
-        verify you typed it in correctly.
+        <h1>Forgotten your password? reset, please.</h1>
+        <p>Enter your email to set a new password.
         </p>
         {% if form.new_password1.help_text %}
             <div class="text-left" style="margin-left: 400px">
@@ -16,23 +15,11 @@ Password Change
     <form class="form-horizontal" action="." method="post">{% csrf_token %}
         <div class="form-group">
             <label class="col-md-5 control-label text-right">
-                {{ form.old_password.label_tag }}
+                {{ form.email.label_tag }}
             </label>
-            <div class="col-md-6 text-left">{{ form.old_password }}</div>
+            <div class="col-md-6 text-left">{{ form.email }}</div>
         </div>
-        <div class="form-group">
-            <label class="col-md-5 control-label text-right">
-                {{ form.new_password1.label_tag }}
-            </label>
-            <div class="col-md-6 text-left">{{ form.new_password1 }}</div>
-        </div>
-        <div class="form-group">
-            <label class="col-md-5 control-label text-right">
-                {{ form.new_password2.label_tag }}
-            </label>
-            <div class="col-md-6 text-left">{{ form.new_password2 }}</div>
-        </div>
-        <input type="submit" value="Change my password" class="btn btn-primary btn-lg">
+        <input type="submit" value="Reset my password" class="btn btn-primary btn-lg">
     </form>
     </div>
 {% endblock %}
