Chante the word: tam -> team

--- a/mysite2/mysite/templates/account/password_reset_email.html
+++ b/mysite2/mysite/templates/account/password_reset_email.html
@@ -4,4 +4,4 @@
 {{ protocol }}:{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}
 <p>your username, in case you've forgotten:{{ user.get_username }}</p>
 <p>Thanks for using our site.</p>
-<p>the andy.com tam</p>
+<p>the andy.com team</p>
