--- a/mysite2/mysite/templates/header.html
+++ b/mysite2/mysite/templates/header.html
@@ -22,6 +22,7 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a href="{% url 'account:password_change' %}">Change password</a></li>
+                                <li><a href="{% url 'account:my_information' %}">information</a> </li>
                             </ul>
                         </div>
                     </li>
