--- a/mysite2/mysite/templates/account/myself.html
+++ b/mysite2/mysite/templates/account/myself.html
@@ -47,7 +47,17 @@ my information
 
     </div>
     <div class="col-md-6">
-        <p>picture</p>
+        {% load static %}
+        <div style="margin-right: 100px">
+            {% if userinfo.photo %}
+            <img src="{{ userinfo.photo | striptags }}" class="img-circle" id="my_photo" name="user_face">
+            {% else %}
+            <img name="user_face" src="{% static 'images/newton.jpg' %}" class="img-circle" width="270px" id="my_photo" alt="img">
+            {% endif %}
+        </div>
+        <div style="margin-right: 100px">
+            <button class="btn btn-lg btn-primary" id="upload_image" onclick="upload_image_layer()">Upload my photo</button>
+        </div>
     </div>
 </div>
 </div>
