implete base template

--- a/mysite2/mysite/templates/header.html
+++ b/mysite2/mysite/templates/header.html
@@ -23,6 +23,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="{% url 'account:password_change' %}">Change password</a></li>
                                 <li><a href="{% url 'account:my_information' %}">information</a> </li>
+                                <li><a href="{% url 'article:article_column' %}">backward manage</a> </li>
                             </ul>
                         </div>
                     </li>
