--- a/mysite2/mysite/templates/article/column/article_column.html
+++ b/mysite2/mysite/templates/article/column/article_column.html
@@ -33,11 +33,35 @@ article column
     function add_column() {
         var index = layer.open({
             type: 1,
-            skin: 'layui-layer-rim',
+            skin: "layui-layer-rim",
             area: ["400px", "200px"],
             title: "new column",
-            content: <div content=""
-        })
+            content: "<div class='text-center' style='margin-top:20px'>\
+                <p>please input the column name</p>\
+                <p>{{ column_form.column }}</p></div>",
+            btn: ["ok", 'cancel'],
+            yes: function (index, layero){
+                column_name = $('#id_column').val();
+                $.ajax({
+                    url: '{% url "article:article_column" %}',
+                    type: 'POST',
+                    data: {"column": column_name},
+                    success: function (e) {
+                        if(e=="1"){
+                            parent.location.reload();
+                            layer.msg("Good");
+                        }else {
+                            layer.msg("please rename the column.")
+                        }
+
+                    },
+                });
+            },
+            btn2: function (index, layero) {
+                layer.close(index);
+            }
+
+        });
     }
 </script>
 {% endblock %}
