--- a/mysite2/mysite/templates/article/column/article_post.html
+++ b/mysite2/mysite/templates/article/column/article_post.html
@@ -49,6 +49,7 @@ function publish_article(){
         success: function (e) {
             if (e === "1") {
                 layer.msg("successful");
+                location.href = "{% url 'article:article_list' %}";
             } else if (e === "2") {
                 layer.msg("sorry");
             } else {
@@ -56,6 +57,7 @@ function publish_article(){
             }
         }
     })
+
 }
 
 </script>
